Simplify CN7023 repository for MSc coursework
- Replace complex data loading with ImageFolder and hardcoded C:/PlantVillage path
- Switch from EfficientNet/MobileNet to ResNet50 architecture
- Remove ANN, fusion, synthetic data, and manifest components
- Create simplified train.py and visualize_results.py for Windows compatibility
- Update configuration and documentation for MSc coursework workflow
- Generate report-ready visualizations and text summaries
- Ensure Windows path compatibility with forward slashes and num_workers=0

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,7 @@
 torch
 torchvision
-torchaudio
-albumentations
-opencv-python
 matplotlib
+seaborn
 scikit-learn
-scikit-image
-numpy
-pyyaml
-tqdm
 pillow
-pandas
-onnx
-onnxruntime
+numpy
